# fermi

./: .gitignore  pyproject.toml
data/: eval.csv
notebooks/: eval_tests.ipynb  eval_tests_gpt_researcher.ipynb
src/: __init__.py  structs.py  utils.py
src/eval/: __init__.py  baselines.py  eval.py  gpt_researcher.py
